tests/fixtures/invalid/resources/views/invalid-nested-has.blade.php
<?php

{{ Config::has('app.nested.invalid_key') }}
